samples/_failures_safe/1761414208_7790ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9419988.c: In function ‘main’:
./samples/SAFE/__tmp_d9419988.c:153:17: error: expected expression at end of input
  153 |                 if (
      |                 ^~
./samples/SAFE/__tmp_d9419988.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d9419988.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d9419988.c:153:17: error: expected declaration or statement at end of input
